--- a/SchoolMedicalSystem.WPF/SchoolMedicalSystem.WPF.csproj
+++ b/SchoolMedicalSystem.WPF/SchoolMedicalSystem.WPF.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
+    <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
